# meridian-airflow

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  airflow_settings.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dags/: meridian_dag.py
docs/adr/: 0002-airflow3-over-dagster.md  0003-duckdb-single-writer-pool.md  0004-elementary-in-quality-task.md
ingestion/: iceberg_demo.py  iceberg_pipeline.py  pipeline.py
tests/: test_dag.py  test_data_quality.py  test_full_pipeline.py  test_iceberg.py
transform/: packages.yml  profiles.yml
